KYLO-213 Fix Visual Query Edit SQL alignment on all browsers

--- a/ui/ui-app/src/main/resources/static/assets/feed-mgr.css
+++ b/ui/ui-app/src/main/resources/static/assets/feed-mgr.css
@@ -296,8 +296,7 @@ card-layout.visual-query-canvas section:first-child {
 
 .visual-query-auto-complete-centered {
   min-height: 200px;
-  height: 200px;
-
+  height: auto;
 }
 
 .visual-query-auto-complete-top {
